--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="@dimen/thirtydp"
         android:orientation="vertical">
 
-        <com.onedatashare.com.onedatashare.Views.OdsTextView
+        <com.onedatashare.com.onedatashare.views.OdsTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -21,7 +21,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/large_text" />
 
-        <com.onedatashare.com.onedatashare.Views.OdsBoldTextView
+        <com.onedatashare.com.onedatashare.views.OdsBoldTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/thirtydp"
@@ -29,7 +29,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/medium_text" />
 
-        <com.onedatashare.com.onedatashare.Views.OdsEdiText
+        <com.onedatashare.com.onedatashare.views.OdsEdiText
             android:id="@+id/etemail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/medium_text" />
 
-        <com.onedatashare.com.onedatashare.Views.OdsEdiText
+        <com.onedatashare.com.onedatashare.views.OdsEdiText
             android:id="@+id/etpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,14 +62,14 @@
             android:layout_marginTop="@dimen/thirtydp"
             android:orientation="horizontal">
 
-            <com.onedatashare.com.onedatashare.Views.OdsBoldTextView
+            <com.onedatashare.com.onedatashare.views.OdsBoldTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/need_an_account"
                 android:textColor="@color/black"
                 android:textSize="@dimen/medium_text" />
 
-            <com.onedatashare.com.onedatashare.Views.OdsBoldTextView
+            <com.onedatashare.com.onedatashare.views.OdsBoldTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/tendp"
